post dao, pre hikari